--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "mathjs": "^7.0.0",
+    "memorystore": "^1.6.2",
     "mongoose": "^5.9.15",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
